<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/logi1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/logi1"
    android:clipToOutline="true">

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="330dp"
        android:layout_height="537dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="106dp"
        android:background="@drawable/rectangle_3" />

    <EditText
        android:id="@+id/username"
        android:layout_width="254dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="195dp"
        android:background="@drawable/rectangle_1"
        android:elevation="4dp"
        android:hint="Username"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="254dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="282dp"
        android:background="@drawable/rectangle_1"
        android:elevation="4dp"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/rectangle_4"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="161dp"
        android:layout_marginTop="407dp"
        android:background="@drawable/rectangle_4"
        android:gravity="center"
        android:text="sign in"
        android:textColor="@color/white"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/new_user_"
        android:layout_width="90dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="486dp"
        android:gravity="center_horizontal|top"
        android:text="@string/new_user_"
        android:textAppearance="@style/new_user_" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="90dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="205dp"
        android:layout_marginTop="486dp"
        android:gravity="center_horizontal|top"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up" />
    <!-- Line 1 -->

    <View
        android:id="@+id/line_1"
        android:layout_width="330dp"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="539dp"
        android:background="@drawable/line_1" />

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="52dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="183dp"
        android:layout_marginTop="519dp"
        android:background="@drawable/ellipse_1" />

    <TextView
        android:id="@+id/or"
        android:layout_width="46dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="183dp"
        android:layout_marginTop="526dp"
        android:gravity="center_horizontal|top"
        android:text="or"
        android:textAppearance="@style/or"

        />

    <RelativeLayout
        android:id="@+id/rectangle_5"
        android:layout_width="254dp"
        android:layout_height="46dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="575dp"
        android:background="@drawable/rectangle_5"
        android:elevation="4dp" >
    <ImageView
        android:id="@+id/google_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/google_1"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:id="@+id/sign_in_wit"
        android:layout_width="154dp"
        android:layout_height="21dp"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal|top"
        android:text="@string/sign_in_wit"
        android:textAppearance="@style/sign_in_wit" />
    </RelativeLayout>
</RelativeLayout>